--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
   <div class="work-steps" id="work-steps">
     <h2 class="main-heading">How it Works ?</h2>
     <div class="container">
-      <img src="images/work-steps.png" alt="">
+      <img src="images/work-steps.png" alt="" class="image">
       <div class="work-box">
         <div class="box">
           <img src="images/work-steps-1.png" alt="">
@@ -941,7 +941,7 @@
       <div class="box">
         <div class="line">
           <i class="fas fa-map-marker-alt fa-fw"></i>
-          <div class="info">Egypt, Menoufia, Quesna,<br> Kafr Bani Gharyan</div>
+          <div class="info">Egypt, Menoufia, Quesna, <span class="nowrap">Kafr Bani Gharyan</span></div>
         </div>
         <div class="line">
           <i class="far fa-clock fa-fw"></i>
